--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JA Enterprises</title>
+  <style>
+    body {
+      display: grid;
+      place-items: center;
+
+      margin: 0; padding: 0;
+      width: 100%; min-height: 100vh;
+
+      background: black;
+
+      font-family: sans-serif;
+      color: white;
+
+      color-scheme: dark;
+    }
+  </style>
 </head>
 
 <body>
